examples/test/testpolicy3653.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3653
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key17: value29
      key11: value29
      key12: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value49
          key42: value44
      podSelector:
        matchLabels:
          key25: value29
          key1: value31
